# Sniper111

./: .env.example  .env.sample  .gitignore  Cargo.toml  README.md  docker-compose.yml  pnpm-lock.yaml  replit.md  setup.sh
.agents/memory/: MEMORY.md  nextjs-app-router-precedence.md  react19-wallet-peer-deps.md  redis-optional-event-bus.md  replit-websocket-routing.md  solana-wallet-adapter-deps.md
.github/workflows/: ci.yml
artifacts/api-server/: Dockerfile  package.json
artifacts/api-server/src/: index.ts
artifacts/api-server/src/lib/: crypto.ts  nats.ts  redis.ts  ws.ts
artifacts/api-server/src/routes/: config.ts  index.ts  performance.ts  positions.ts  tokens.ts  trades.ts  wallet.ts
artifacts/trading-dashboard/: Dockerfile  index.html  next.config.ts  package.json  tsconfig.json
artifacts/trading-dashboard/.replit-artifact/: artifact.toml
artifacts/trading-dashboard/src/: App.tsx  index.css
artifacts/trading-dashboard/src/app/: globals.css  layout.tsx  page.tsx
artifacts/trading-dashboard/src/app/config/: page.tsx
artifacts/trading-dashboard/src/app/live/: page.tsx
artifacts/trading-dashboard/src/app/positions/: page.tsx
artifacts/trading-dashboard/src/app/trades/: page.tsx
artifacts/trading-dashboard/src/components/: layout.tsx  providers.tsx  sidebar.tsx
artifacts/trading-dashboard/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  slider.tsx  switch.tsx  tabs.tsx
artifacts/trading-dashboard/src/lib/: api.ts  utils.ts  wallet.ts
artifacts/trading-dashboard/src/pages/: config.tsx  dashboard.tsx  live-scanner.tsx  positions.tsx  trades.tsx
attached_assets/: Pasted-MVP-System-Architecture-Development-Prompt-For-an-autom_1784448357903.txt
common/proto/: engine.proto
common/proto/engine/: engine.pb.go  engine_grpc.pb.go  go.mod
docs/: TEST-RESULTS.md
lib/api-spec/: openapi.yaml
lib/common/: package.json
lib/common/src/: events.ts  types.ts
lib/db/: schema.sql
lib/db/src/schema/: botConfig.ts  botState.ts  equityHistory.ts  index.ts  positions.ts  tokens.ts  trades.ts  walletConfig.ts
rust-engine/: Cargo.toml  Dockerfile  build.rs
rust-engine/src/: config.rs  executor_bsc.rs  executor_solana.rs  filter.rs  grpc.rs  listener_bsc.rs  listener_solana.rs  main.rs  pancake_router_v2_abi.json  position_monitor.rs  safety.rs  types.rs
scripts/: test-e2e.sh
services/api-go/: Dockerfile  db.go  go.mod  go.sum  grpc.go  main.go  models.go  pubsub.go  routes.go  ws.go
services/common/: Cargo.toml
services/common/src/: lib.rs
services/executor-bsc/: Cargo.toml  Dockerfile
services/executor-bsc/src/: main.rs
services/executor-solana/: Cargo.toml  Dockerfile
services/executor-solana/src/: main.rs
services/listener-bsc/: Cargo.toml  Dockerfile
services/listener-bsc/src/: main.rs
services/listener-solana/: Cargo.toml  Dockerfile
services/listener-solana/src/: filter.rs  grpc.rs  main.rs
