[package]
name = "rust-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4"] }

# Solana
solana-sdk = "2.1"
solana-client = "2.1"
solana-transaction-status = "2.1"
solana-account-decoder = "2.1"
spl-token = "6.0"
spl-associated-token-account = "5.0"

# Yellowstone gRPC
yellowstone-grpc-client = "2.0"
yellowstone-grpc-proto = "2.0"

# Jupiter / Jito
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
base64 = "0.22"
bs58 = "0.5"
bincode = "1.3"

# EVM / BSC
ethers = { version = "2.0", features = ["rustls", "ws"] }

# gRPC
tonic = "0.12"
prost = "0.13"
tokio-stream = "0.1"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tokio-test = "0.4"
