[package]
name = "executor-bsc"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
ethers = { version = "2.0", features = ["ws", "rustls"] }
chrono = { version = "0.4", features = ["serde"] }
common = { path = "../common" }
hex = "0.4"
secp256k1 = { version = "0.29", features = ["global-context"] }
